sikdae/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sikdae-backend
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: sikdae-backend
  template:
    metadata:
      labels:
        app: sikdae-backend
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: backend
          image: ghcr.io/noeulnight/sikdae-backend:latest
          ports:
            - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sikdae-frontend
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: sikdae-frontend
  template:
    metadata:
      labels:
        app: sikdae-frontend
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: frontend
          image: ghcr.io/noeulnight/sikdae-frontend:latest
          ports:
            - containerPort: 80
