sikdae/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sikdae-backend-service
spec:
  selector:
    app: sikdae-backend
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: sikdae-frontend-service
spec:
  selector:
    app: sikdae-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
